# dxvk-remix-mirrorsedge

./: README.md  build_common.ps1  meson.build
bridge/: build_common.ps1
src/d3d9/: d3d9_common_texture.cpp  d3d9_rtx.cpp  d3d9_rtx.h  d3d9_rtx_geometry.cpp  d3d9_state.h
src/dxso/: dxso_compiler.cpp  dxso_compiler.h  dxso_ctab.cpp  dxso_ctab.h
src/dxvk/: meson.build
src/dxvk/imgui/: dxvk_imgui.cpp
src/dxvk/rtx_render/: rtx_asset_exporter.cpp  rtx_atmosphere.cpp  rtx_atmosphere.h  rtx_camera_manager.cpp  rtx_camera_manager.h  rtx_context.cpp  rtx_context.h  rtx_geometry_utils.h  rtx_instance_manager.cpp  rtx_materials.h  rtx_options.h  rtx_pathtracer_gbuffer.cpp  rtx_pathtracer_integrate_direct.cpp  rtx_pathtracer_integrate_indirect.cpp  rtx_scene_manager.cpp  rtx_scene_manager.h  rtx_sky.h  rtx_types.cpp
src/dxvk/shaders/rtx/algorithm/: geometry_resolver.slangh  integrator_direct.slangh  integrator_indirect.slangh  visibility.slangh
src/dxvk/shaders/rtx/algorithm/rtxdi/: RtxdiApplicationBridge.slangh
src/dxvk/shaders/rtx/concept/ray/: ray.slangh
src/dxvk/shaders/rtx/concept/surface/: surface.h
src/dxvk/shaders/rtx/concept/surface_material/: opaque_surface_material_interaction.slangh
src/dxvk/shaders/rtx/pass/: common_binding_indices.h  common_bindings.slangh  interleave_geometry.h  interleave_geometry_indices.h  raytrace_args.h
src/dxvk/shaders/rtx/pass/atmosphere/: atmosphere_args.h  atmosphere_bindings.slangh  atmosphere_common.slangh  sky_view_lut.comp.slang  (+2 more)
src/util/: util_matrix.h
src/util/config/: config.cpp
tests/rtx/: meson.build
(+5 files in other folders)
